# powstanicy-client

./: .gitignore  LICENSE  README.md  pyproject.toml
powstancy_client/: datastore.py  update_table.py
tests/: conftest.py  test_datastore.py  test_update_table.py
