[tool.poetry]
name = "powstancy-client"
version = "0.1.0"
description = ""
authors = ["klinga <klingaroo@gmail.com>"]
readme = "README.md"
packages = [{include = "powstancy_client"}]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.42"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
black = "^22.8.0"
mypy = "^0.981"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
    /(
        \.eggs
       | \.git
       | \.hg
       | \.mypy_cache
       | \.tox
       | \.venv
       | _build
       | buck-out
       | build
       | dist
    )/
    | temp.py
)
'''

[tool.pytest.ini_options]
markers = [
  "local: run only on a local machine",
  "slow: slow operations on large sets" 
]
addopts = "-vv --color=yes"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
